# starting-ragchatbot-codebase

./: CLAUDE.md  README.md  frontend-changes.md  package-lock.json  pyproject.toml
.github/workflows/: claude-code.yml
backend/: ai_generator.py  app.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  learning_plan.md  run_tests.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_live_system.py  test_rag_integration.py  testing_guide.md
frontend/: index.html  script.js  style.css
scripts/: format_code.sh  quality_check.sh
